# path2map

./: .p2mignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPECS.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: cli-arguments.md  release-dry-run.md  versioning.md
docs/adr/: 0001-core-traversal-and-ignore-precedence.md  0002-determinism-and-ordering-guarantees.md  0003-dependency-minimization-and-stdlib-first-policy.md  0004-logging-posture-and-redaction-guarantees.md
docs/samples/: README.md  commands.sh
docs/samples/input/project/: .p2mignore  README.md  config.toml
docs/samples/input/project/docs/: guide.md
docs/samples/input/project/src/: main.py  utils.py
docs/samples/output/: help.txt  tree.csv  tree.details.txt  tree.filtered.txt  tree.folders.txt  tree.html  tree.json  tree.md  tree.symlinks-follow.txt  version.txt
scripts/: package_check.sh
src/path2map/: __init__.py  __main__.py  cli.py  filtering.py  ignore.py  model.py  output.py  pipeline.py  traversal.py
src/path2map/render/: __init__.py  csv.py  html.py  json.py  markdown.py  text.py
tests/: test_cli_e2e.py  test_cli_help.py  test_cli_parser.py  test_cli_smoke.py  test_details_and_color.py  test_filtering.py  test_ignore.py  test_model.py  test_output_routing.py  test_pipeline.py  test_render_csv.py  test_render_html.py  test_render_json.py  test_render_markdown.py  test_render_text.py  test_traversal.py
