[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "path2map"
version = "0.1.0"
description = "Directory-structure inspection and export tool"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Matthew Craig"}]
keywords = ["cli", "filesystem", "tree", "documentation", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/taggedzi/path2map"
Repository = "https://github.com/taggedzi/path2map"
Issues = "https://github.com/taggedzi/path2map/issues"
Changelog = "https://github.com/taggedzi/path2map/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
path2map = "path2map.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-q --cov=path2map --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["path2map"]

[tool.coverage.report]
fail_under = 0
show_missing = true
